--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>PortalCollegeApp</title>
+    <title>Portal</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <!-- Flowbite CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css"
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="bg-gray-900 text-gray-100">
     <app-root></app-root>
 
+    <!-- Flowbite JS -->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+
+    <!-- Fontawesome JS -->
+    <script
+      src="https://kit.fontawesome.com/16a6d3e9f5.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
